--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "postcss-cli": "^10.1.0"
+    "postcss-cli": "^10.1.0",
+    "prop-types": "^15.8.1",
+    "react-responsive-pagination": "^2.2.2"
   }
 }
