--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
-        "league/commonmark": "^2.4"
+        "league/commonmark": "^2.4",
+        "league/csv": "^9.10"
     }
 }
