--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     ],
     "require": {
         "league/commonmark": "^2.4",
-        "league/csv": "^9.10"
+        "league/csv": "9.0"
     }
 }
